Christopher/Jorge/Steven gei

--- a/Dream_Flights/Dream_Flights.csproj
+++ b/Dream_Flights/Dream_Flights.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Folder Include="DatabaseHelper\Scripts\" />
+    <Folder Include="wwwroot\Images\Profiles\" />
   </ItemGroup>
 
 </Project>
